@@ -20,7 +20,8 @@
 
 <ul>
  <li> New <tt>buffer_timed_getv</tt>, <tt>buffer_timed_putv</tt>,
-<tt>timed_read</tt> and <tt>timed_readv</tt> functions. </li>
+<tt>timed_read</tt> and <tt>timed_readv</tt>,
+<tt>timed_write</tt> and <tt>timed_writev</tt> functions. </li>
 </ul>
 
 <h2> in 2.14.3.0 </h2>
