@@ -833,6 +833,8 @@ src/libunixonacid/timed_getln.o src/libunixonacid/timed_getln.lo: src/libunixona
 src/libunixonacid/timed_getlnmax.o src/libunixonacid/timed_getlnmax.lo: src/libunixonacid/timed_getlnmax.c src/include/skalibs/allreadwrite.h src/include/skalibs/buffer.h src/include/skalibs/functypes.h src/include/skalibs/skamisc.h src/include/skalibs/unix-timed.h
 src/libunixonacid/timed_read.o src/libunixonacid/timed_read.lo: src/libunixonacid/timed_read.c src/include/skalibs/allreadwrite.h src/include/skalibs/functypes.h src/include/skalibs/unix-timed.h
 src/libunixonacid/timed_readv.o src/libunixonacid/timed_readv.lo: src/libunixonacid/timed_readv.c src/include/skalibs/allreadwrite.h src/include/skalibs/functypes.h src/include/skalibs/siovec.h src/include/skalibs/unix-timed.h
+src/libunixonacid/timed_write.o src/libunixonacid/timed_write.lo: src/libunixonacid/timed_write.c src/include/skalibs/allreadwrite.h src/include/skalibs/functypes.h src/include/skalibs/unix-timed.h
+src/libunixonacid/timed_writev.o src/libunixonacid/timed_writev.lo: src/libunixonacid/timed_writev.c src/include/skalibs/allreadwrite.h src/include/skalibs/functypes.h src/include/skalibs/siovec.h src/include/skalibs/unix-timed.h
 src/libunixonacid/unixconnection_free.o src/libunixonacid/unixconnection_free.lo: src/libunixonacid/unixconnection_free.c src/include/skalibs/unixconnection.h src/include/skalibs/unixmessage.h
 src/libunixonacid/unixconnection_init.o src/libunixonacid/unixconnection_init.lo: src/libunixonacid/unixconnection_init.c src/include/skalibs/unixconnection.h src/include/skalibs/unixmessage.h
 src/libunixonacid/unixconnection_init_withclosecb.o src/libunixonacid/unixconnection_init_withclosecb.lo: src/libunixonacid/unixconnection_init_withclosecb.c src/include/skalibs/unixconnection.h src/include/skalibs/unixmessage.h
